[tool.poetry]
name = "rl-taxi-driver"
version = "0.1.0"
description = ""
authors = ["Filippo Buoncompagni <filippo.buonco95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
pygame = "^2.5.2"
matplotlib = "^3.8.3"
mlflow = "^2.11.2"
setuptools = "^69.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"

[tool.black]
line-length = 119

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
max-line-length = 119

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
